--- a/index.html
+++ b/index.html
@@ -1,60 +1,64 @@
-import React, { useState } from "react";
-
-export default function HomeCleaning() {
-  const [name, setName] = useState("");
-  const [phone, setPhone] = useState("");
-  const [square, setSquare] = useState("");
-  const [message, setMessage] = useState("");
-  const pricePerSqm = 500;
-
-  const handleSubmit = async (e) => {
-    e.preventDefault();
-    const totalPrice = square * pricePerSqm;
-
-    const mailtoLink = `mailto:karimbola19@gmail.com?subject=Заявка на уборку&body=Имя: ${name}%0D%0AТелефон: ${phone}%0D%0AКвадратура: ${square} м²%0D%0AИтоговая стоимость: ${totalPrice} тг`;
-    window.location.href = mailtoLink;
-  };
-
-  return (
-    <div className="min-h-screen bg-gray-100 flex flex-col items-center p-4">
-      <h1 className="text-4xl font-bold text-green-700 mb-4">Эко-Клининг</h1>
-      <p className="text-gray-700 text-lg mb-6">Чистота без химии и вреда для природы!</p>
-      <form onSubmit={handleSubmit} className="bg-white shadow-md rounded-lg p-6 w-full max-w-md">
-        <label className="block text-gray-700">Ваше имя</label>
-        <input 
-          type="text" 
-          className="border w-full p-2 rounded mt-1 mb-4" 
-          value={name} 
-          onChange={(e) => setName(e.target.value)} 
-          required 
-        />
-
-        <label className="block text-gray-700">Ваш телефон</label>
-        <input 
-          type="tel" 
-          className="border w-full p-2 rounded mt-1 mb-4" 
-          value={phone} 
-          onChange={(e) => setPhone(e.target.value)} 
-          required 
-        />
-
-        <label className="block text-gray-700">Квадратура помещения (м²)</label>
-        <input 
-          type="number" 
-          className="border w-full p-2 rounded mt-1 mb-4" 
-          value={square} 
-          onChange={(e) => setSquare(e.target.value)} 
-          required 
-        />
-
-        {square && (
-          <p className="text-green-700 text-lg font-bold mb-4">
-            Итоговая стоимость: {square * pricePerSqm} тг
-          </p>
-        )}
-
-        <button className="bg-green-700 text-white px-4 py-2 rounded w-full">Отправить заявку</button>
-      </form>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Эко-Клининг – Чистота без химии</title>
+    <style>
+        body { font-family: Arial, sans-serif; background-color: #f4f4f4; margin: 0; padding: 0; }
+        .container { max-width: 800px; margin: 20px auto; background: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
+        h1 { color: #2d8f47; text-align: center; }
+        p { text-align: center; color: #555; }
+        .form-group { margin-bottom: 15px; }
+        label { display: block; font-weight: bold; margin-bottom: 5px; }
+        input { width: 100%; padding: 8px; border: 1px solid #ccc; border-radius: 5px; }
+        button { width: 100%; padding: 10px; background: #2d8f47; color: white; border: none; border-radius: 5px; font-size: 16px; cursor: pointer; }
+        button:hover { background: #24763a; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Эко-Клининг</h1>
+        <p>Чистота без химии и вреда для природы!</p>
+        <form id="cleaningForm">
+            <div class="form-group">
+                <label for="name">Ваше имя</label>
+                <input type="text" id="name" required>
+            </div>
+            <div class="form-group">
+                <label for="phone">Ваш телефон</label>
+                <input type="tel" id="phone" required>
+            </div>
+            <div class="form-group">
+                <label for="square">Квадратура помещения (м²)</label>
+                <input type="number" id="square" required>
+            </div>
+            <p id="totalPrice" style="font-weight: bold; text-align: center;"></p>
+            <button type="submit">Отправить заявку</button>
+        </form>
     </div>
-  );
-}
+
+    <script>
+        document.getElementById('square').addEventListener('input', function() {
+            const pricePerSqm = 500;
+            const square = parseFloat(this.value);
+            if (!isNaN(square)) {
+                document.getElementById('totalPrice').textContent = `Итоговая стоимость: ${square * pricePerSqm} тг`;
+            } else {
+                document.getElementById('totalPrice').textContent = '';
+            }
+        });
+
+        document.getElementById('cleaningForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const name = document.getElementById('name').value;
+            const phone = document.getElementById('phone').value;
+            const square = document.getElementById('square').value;
+            const totalPrice = square * 500;
+
+            const mailtoLink = `mailto:karimbola19@gmail.com?subject=Заявка на уборку&body=Имя: ${name}%0D%0AТелефон: ${phone}%0D%0AКвадратура: ${square} м²%0D%0AИтоговая стоимость: ${totalPrice} тг`;
+            window.location.href = mailtoLink;
+        });
+    </script>
+</body>
+</html>
