--- a/index.html
+++ b/index.html
@@ -265,12 +265,14 @@
     <div class="container">
       <h2>Заказать уборку</h2>
       <div class="order-form">
-        <form action="https://formsubmit.co/karimbola19@gmail.com" method="POST">
+       <form action="https://formsubmit.co/eco.cleaning.astana@gmail.com" method="POST">
+    <input type="hidden" name="_captcha" value="false">
     <input type="text" name="name" placeholder="Ваше имя" required>
     <input type="tel" name="phone" placeholder="Ваш телефон" required>
     <input type="number" name="square" placeholder="Квадратура помещения (м²)" required>
     <button type="submit">Отправить заявку</button>
-        </form>
+</form>
+
       </div>
     </div>
   </section>
