--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <div class="container">
       <h2>Заказать уборку</h2>
       <div class="order-form">
-       <form action="https://formsubmit.co/eco.cleaning.astana@gmail.com" method="POST">
+       <form action="https://formsubmit.co/59584794af1e49409985f86ecd64840b" method="POST">
     <input type="hidden" name="_captcha" value="false">
     <input type="text" name="name" placeholder="Ваше имя" required>
     <input type="tel" name="phone" placeholder="Ваш телефон" required>
